--- a/index.htm
+++ b/index.htm
@@ -33,9 +33,17 @@
       </section>
       <section class="sec02">
         <div id="img1">
-          <img src="images/man.jpeg" alt="designing" title="designing"  />
+          <img id="im" src="images/man.jpeg"  alt="designing" title="designing"  />
         </div>
       </section>
+    </section>
+
+    <section class="sec1">
+<div id="des6"> Reach new heights with lift  </div>
+      <!-- <section class="sec11"></section>
+      <section class="sec12"></section>
+      <section class="sec13"></section> -->
+
     </section>
   </body>
 </html>
