--- a/index.htm
+++ b/index.htm
@@ -39,11 +39,73 @@
     </section>
 
     <section class="sec1">
-<div id="des6"> Reach new heights with lift  </div>
-      <!-- <section class="sec11"></section>
-      <section class="sec12"></section>
-      <section class="sec13"></section> -->
 
+      <section class="sec11"> 
+            <div id="des6"> Reach new heights with lift  </div>
+      </section>
+      <section class="sec12">
+        <div>
+          <!-- icon -->
+        </div>
+        <div>Professionally Designed Demos</div>
+        <div>Pixel perfect $ expertly crafted to meet standards.</div>
+      </section>
+      <section class="sec13">
+        <div>
+          <!-- icon -->
+        </div>
+        <div>
+          Responsive On Any Device
+        </div>
+        <div>
+          Showcase your site on all devices with confidence
+        </div>
+      </section>
+      <section class="sec14">
+        <div>
+          <!-- icon -->
+        </div>
+        <div>
+          Professional, World-Class Support
+        </div>
+        <div>
+          We love what we do & who we do it for.
+        </div>
+      </section>
+
+    </section>
+
+    <section class="sec2">
+      <section class="sec21">
+        <!-- svg -->
+      </section>
+      <section class="sec22">
+        <section class="sec221">
+          <div> What we do</div>
+          <div>We'll scale your brand alongside you</div>
+        </section>
+        <section class="sec222">
+          <div>
+            <!-- star icon -->
+          </div>
+          <div>
+            "Price is what you pay. Value is what you get."
+          </div>
+          <div>John Doe, <span> Lift Client </span></div>
+        </section>
+      </section>
+    </section>
+
+    <section class="sec3">
+      <section class="sec31">
+
+      </section>
+      <section class="sec32">
+
+      </section>
+      <section class="sec33">
+        
+      </section>
     </section>
   </body>
 </html>
